--- a/_sass/ui/typography.scss
+++ b/_sass/ui/typography.scss
@@ -95,8 +95,8 @@ strong {
   display: inline-block;
   padding: 0.4em 1em;
   vertical-align: middle;
-  margin-left: 1em;
-  margin-right: 1em;
+  margin-left: 0.8em;
+  margin-right: 0.8em;
 }
 
 .code {
